--- a/src/views/organizer/application-status.ejs
+++ b/src/views/organizer/application-status.ejs
@@ -232,6 +232,7 @@
             Back to Home
           </a>
         <% } %>
+      </div>
 
       <!-- Info Box -->
       <div class="info-box">
